# MetodosCuantitativos

./: TeoriaColasMD1.md  TeoriaColasMDS.md  TeoriaColasMMS.md  TeoriaColasMarkdown.md  cola_md1.py  cola_mdc.py  cola_mm1.py  cola_mmc.py  probabilidadEstadomms.py  pyproject.toml
Asignacion/: main.py  models.py  optimizer.py
AsignacionContratacion/: hungaro.py  main.py  modelos.py  optimizador.py  reporte.py
TeoriaDeColas/: MD1AnalisisMejora.py  TeoriaColasMDS.md  TeoriaColasMMS.md  UsosDeCadaCodigo.md  cola_md1.py  cola_mm1.py  cola_mmc.py  probabilidadEstadomms.py
TeoriaDeInventario/: InventoryScenarios.py  TeoriaInventario.md
Transporte/: MetodosTransporte.py  Transporte.py  data5.txt
